# CXXMicroService

./: .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
config/: LoggerConfig.xml
examples/: CMakeLists.txt
examples/basic_example/: CMakeLists.txt
examples/basic_example/Client/: CMakeLists.txt  main.cpp
examples/basic_example/Server/: CMakeLists.txt  main.cpp
examples/config/: service_config.json
include/: CurlHandle.h  HTTP.h  MicroService.h  MicroserviceLogger.h  ProtocolType.h  ServiceConfiguration.h  ZMQHTTP.h  ZMQMicroServiceClient.h
src/: MicroService.cpp  ZMQMicroServiceClient.cpp
